--- a/form.html
+++ b/form.html
@@ -50,16 +50,21 @@
 												<span class="contact_us_text">Связаться с нами</span>
 											</div>
 								<div class="contact_us_lable">
-									<input placeholder="Name" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$">
+									
+									<input class="" id="user_name" placeholder="Андрей Федоров" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$">
 									<span class="validity"></span>
+									<label class="form-label" for="user_name">Name</label> 
 								</div>
 								<div class="contact_us_lable">
-									<input placeholder="reqest" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$">
+									<input id="user_reqeest" placeholder="Монтаж проводки в доме" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$">
 									<span class="validity"></span>
+									<label class="form-label" for="user_reqeest">Name</label>
+									
 								</div>
 									<div class="contact_us_lable">
-										<input type="tel" id="phone" name="phone" placeholder="+7 (900) 544 7909" required>
-					 <span class="validity"></span>
+										<input type="tel" id="user_phone" name="phone" placeholder="+7 (900) 544 7909" required>
+										<span class="validity"></span>
+										<label class="form-label" for="user_phone">Name</label>
 					</div>
 					<div class="contact_us_button">	<button class="back">Push</button>
 					</div>
