start create site

--- a/form.html
+++ b/form.html
@@ -53,18 +53,18 @@
 									
 									<input class="" id="user_name" placeholder="Андрей Федоров" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$">
 									<span class="validity"></span>
-									<label class="form-label" for="user_name">Name</label> 
+									<label class="form-label" for="user_name">Ваше имя</label> 
 								</div>
 								<div class="contact_us_lable">
 									<input id="user_reqeest" placeholder="Монтаж проводки в доме" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$">
 									<span class="validity"></span>
-									<label class="form-label" for="user_reqeest">Name</label>
+									<label class="form-label" for="user_reqeest">Что вы хотите уточнить?</label>
 									
 								</div>
 									<div class="contact_us_lable">
 										<input type="tel" id="user_phone" name="phone" placeholder="+7 (900) 544 7909" required>
 										<span class="validity"></span>
-										<label class="form-label" for="user_phone">Name</label>
+										<label class="form-label" for="user_phone">Ваш номер телефона</label>
 					</div>
 					<div class="contact_us_button">	<button class="back">Push</button>
 					</div>
