--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link rel="stylesheet" href="./css/main.css">
 	<title>AC Power</title>
 </head>
-
 <body>
 	<header class="main-menu no-gutters">
 		<nav class="navbar">
@@ -119,13 +118,19 @@
 				<div class="main-navigation-container" id="m_memu_text">
 				<ul class="navbar-links">
 					<li class="nav-link">
-						<a href="#" class="nav-a">About</a>
+						<a href="#" class="nav-a">Электрика</a>
 					</li>
 					<li class="nav-link">
-						<a href="#" class="nav-a">Functions</a>
+						<a href="#" class="nav-a">Слаботочные системы</a>
 					</li>
 					<li class="nav-link">
-						<a href="#" class="nav-a">What we do?</a>
+						<a href="#" class="nav-a">О нас</a>
+					</li>
+					<li class="nav-link">
+						<a href="#" class="nav-a">Мастера</a>
+					</li>
+					<li class="nav-link">
+						<a href="#" class="nav-a">Контакты</a>
 					</li>
 
 				</ul>
@@ -134,73 +139,116 @@
 		</div>
 		</nav>
 	</header>
-	<div class="container-fluid no-gutters main-container">
-		<div class="row header-row align-items-center">
-			<div class="col-12 col-md-6 header-row-one">
+	<main class="container-fluid no-gutters main-container">
+		<div class="row header-row">
+			<div class="col-12 header-row-one">
 				<h1 class="header-row-text align-middle">power in your house</h1>
 				<p class="header-row-text-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Recusandae iste optio perferendis.<br>Lorem ipsum dolor sit amet
 					Culpa adipisci .</p>
 				<a href="/404.html"><button class="contact-us">Подробнее</button></a>
 			</div>
-			<div class="col-12 col-md-6 header-row-one-img">
-				
+		</div>
+		<section class="site-content">
+		<div class="row justify-content-center electriс">
+			<h2 class="electric-tittle">lorem</h2>
+			<p class="electric-descr"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, accusantium, earum ipsum velit laudantium incidunt tempora quaerat enim voluptatibus blanditiis repellat! Et vero numquam sed facere dolorem reiciendis omnis quo eligendi magnam cumque nemo, sunt, vel dolorum accusantium tenetur assumenda? Impedit minima laudantium fugiat modi, sed consequuntur iusto dignissimos harum molestiae. Pariatur nostrum vero minima ea molestias. Laboriosam veniam dignissimos vitae explicabo laborum, tenetur ipsa molestias ex iure debitis consequatur adipisci voluptatibus, nostrum ratione eaque unde voluptates. Obcaecati sapiente, asperiores praesentium ex ullam magnam quo ea harum natus eaque nesciunt iure aut. Obcaecati ab veritatis, sit sint recusandae voluptatum ipsam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nobis molestiae, quibusdam tempore, et provident sed nulla accusamus obcaecati doloribus voluptatum distinctio alias maiores odit natus ipsum. Atque vero eos cumque magnam, quae eveniet, qui officia soluta, quam neque nulla?</p>
+			<!-- <section class="slider_container" id="up_page">
+					<div class="element-card">
+						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+					<div class="element-card">
+						<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="#" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+					<div class="element-card">
+						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="#" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+					<div class="element-card">
+						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="#" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+					<div class="element-card">
+						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="#" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+					<div class="element-card">
+						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="#" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+					<div class="element-card">
+						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="#" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+					<div class="element-card">
+						<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="#" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+					<div class="element-card">
+						<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="#" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+					<div class="element-card">
+						<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
+						<div class="element-card_text_container">
+							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+			
+							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+							<a href="#" class="card-more"><button class="element_button">More</button></a>
+						</div>
+					</div>
+													</section>
+	</div>
+	
+</section> -->
+</main>
 
-			</div>
-		</div>
-		<div class="row justify-content-center cards">
-		<div class="col-12 col-md-6 col-lg-3 card-about"> 
-			<div class="img-container">
-			<img src="/img/victory.svg" alt="" class="card-img">
-			</div>
-			<span class="card-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, suscipit!</span>
-		</div>
-		<div class="col-12 col-md-6 col-lg-3 card-about"> 
-			<div class="img-container">
-			<img src="/img/victory.svg" alt="" class="card-img">
-			</div>
-			<span class="card-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, suscipit!</span>
-		</div>
-		<div class="col-12 col-md-6 col-lg-3 card-about"> 
-			<div class="img-container">
-			<img src="/img/victory.svg" alt="" class="card-img">
-			</div>
-			<span class="card-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, suscipit!</span>
-		</div>
-		<div class="col-12 col-md-6 col-lg-3 card-about"> 
-				<div class="img-container">
-				<img src="/img/victory.svg" alt="" class="card-img">
-				</div>
-				<span class="card-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, suscipit!</span>
-			</div>
-	</div>
-	<div class="row justify-content-center about">
-		<div class="col-12">
-			<h1 class="about-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h1>
-			<p class="about-discr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique laudantium, labore quis temporibus sunt nihil numquam ea illo dicta laborum quo soluta id maxime doloremque voluptatibus distinctio quidem dolores molestiae, ipsum officia magnam consequuntur earum perferendis iusto? Possimus ducimus omnis magni! Minus odit amet, accusantium blanditiis doloribus repellat aperiam provident reprehenderit omnis nisi, officia cupiditate soluta nemo quidem? Dolorem illum consectetur, atque voluptas delectus, enim temporibus a odio ad aperiam beatae? Facilis quis reprehenderit, beatae et debitis eum necessitatibus vero magnam ex earum odit praesentium nesciunt in corporis illo molestias? Architecto molestias nihil in quis distinctio recusandae dolores totam voluptatem.</p>
-		</div>
-	</div>
-
-	<div class="row justify-content-center about">
-		<div class="col-12">
-			<h1 class="about-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h1>
-			<p class="about-discr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique laudantium, labore quis temporibus sunt nihil numquam ea illo dicta laborum quo soluta id maxime doloremque voluptatibus distinctio quidem dolores molestiae, ipsum officia magnam consequuntur earum perferendis iusto? Possimus ducimus omnis magni! Minus odit amet, accusantium blanditiis doloribus repellat aperiam provident reprehenderit omnis nisi, officia cupiditate soluta nemo quidem? Dolorem illum consectetur, atque voluptas delectus, enim temporibus a odio ad aperiam beatae? Facilis quis reprehenderit, beatae et debitis eum necessitatibus vero magnam ex earum odit praesentium nesciunt in corporis illo molestias? Architecto molestias nihil in quis distinctio recusandae dolores totam voluptatem.</p>
-		</div>
-	</div>
-
-	<div class="row justify-content-center about">
-		<div class="col-12">
-			<h1 class="about-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h1>
-			<p class="about-discr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique laudantium, labore quis temporibus sunt nihil numquam ea illo dicta laborum quo soluta id maxime doloremque voluptatibus distinctio quidem dolores molestiae, ipsum officia magnam consequuntur earum perferendis iusto? Possimus ducimus omnis magni! Minus odit amet, accusantium blanditiis doloribus repellat aperiam provident reprehenderit omnis nisi, officia cupiditate soluta nemo quidem? Dolorem illum consectetur, atque voluptas delectus, enim temporibus a odio ad aperiam beatae? Facilis quis reprehenderit, beatae et debitis eum necessitatibus vero magnam ex earum odit praesentium nesciunt in corporis illo molestias? Architecto molestias nihil in quis distinctio recusandae dolores totam voluptatem.</p>
-		</div>
-	</div>
-
-	<div class="row justify-content-center about">
-		<div class="col-12">
-			<h1 class="about-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h1>
-			<p class="about-discr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique laudantium, labore quis temporibus sunt nihil numquam ea illo dicta laborum quo soluta id maxime doloremque voluptatibus distinctio quidem dolores molestiae, ipsum officia magnam consequuntur earum perferendis iusto? Possimus ducimus omnis magni! Minus odit amet, accusantium blanditiis doloribus repellat aperiam provident reprehenderit omnis nisi, officia cupiditate soluta nemo quidem? Dolorem illum consectetur, atque voluptas delectus, enim temporibus a odio ad aperiam beatae? Facilis quis reprehenderit, beatae et debitis eum necessitatibus vero magnam ex earum odit praesentium nesciunt in corporis illo molestias? Architecto molestias nihil in quis distinctio recusandae dolores totam voluptatem.</p>
-		</div>
-	</div>
-	</div>
 	<script src="./js/main.js"></script>
 </body>
 
