--- a/index.html
+++ b/index.html
@@ -148,105 +148,107 @@
 				<a href="/404.html"><button class="contact-us">Подробнее</button></a>
 			</div>
 		</div>
-		<section class="site-content">
+		<section class="row site-content">
 		<div class="row justify-content-center electriс">
+			<div class="col-12">
 			<h2 class="electric-tittle">lorem</h2>
 			<p class="electric-descr"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, accusantium, earum ipsum velit laudantium incidunt tempora quaerat enim voluptatibus blanditiis repellat! Et vero numquam sed facere dolorem reiciendis omnis quo eligendi magnam cumque nemo, sunt, vel dolorum accusantium tenetur assumenda? Impedit minima laudantium fugiat modi, sed consequuntur iusto dignissimos harum molestiae. Pariatur nostrum vero minima ea molestias. Laboriosam veniam dignissimos vitae explicabo laborum, tenetur ipsa molestias ex iure debitis consequatur adipisci voluptatibus, nostrum ratione eaque unde voluptates. Obcaecati sapiente, asperiores praesentium ex ullam magnam quo ea harum natus eaque nesciunt iure aut. Obcaecati ab veritatis, sit sint recusandae voluptatum ipsam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nobis molestiae, quibusdam tempore, et provident sed nulla accusamus obcaecati doloribus voluptatum distinctio alias maiores odit natus ipsum. Atque vero eos cumque magnam, quae eveniet, qui officia soluta, quam neque nulla?</p>
-			<!-- <section class="slider_container" id="up_page">
-					<div class="element-card">
-						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-					<div class="element-card">
-						<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="#" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-					<div class="element-card">
-						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="#" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-					<div class="element-card">
-						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="#" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-					<div class="element-card">
-						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="#" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-					<div class="element-card">
-						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="#" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-					<div class="element-card">
-						<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="#" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-					<div class="element-card">
-						<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="#" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-					<div class="element-card">
-						<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="#" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-					<div class="element-card">
-						<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
-						<div class="element-card_text_container">
-							<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-			
-							<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-							<a href="#" class="card-more"><button class="element_button">More</button></a>
-						</div>
-					</div>
-													</section>
+		</div>
 	</div>
 	
-</section> -->
+</section>
+<section class="row justify-content-center" id="up_page">
+	<div class="element-card">
+		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+	<div class="element-card">
+		<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="#" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+	<div class="element-card">
+		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="#" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+	<div class="element-card">
+		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="#" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+	<div class="element-card">
+		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="#" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+	<div class="element-card">
+		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="#" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+	<div class="element-card">
+		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="#" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+	<div class="element-card">
+		<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="#" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+	<div class="element-card">
+		<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="#" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+	<div class="element-card">
+		<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
+		<div class="element-card_text_container">
+			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+
+			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+			<a href="#" class="card-more"><button class="element_button">More</button></a>
+		</div>
+	</div>
+									</section>
 </main>
 
 	<script src="./js/main.js"></script>
